Additional marionette functionality added

--- a/app/js/templates/pages/home.tmpl
+++ b/app/js/templates/pages/home.tmpl
@@ -1,4 +1,4 @@
-<div class="home-inner">
-	<div class="chart"></div>
-	<!-- ./chart -->
-</div>
+<section>
+	<div class="charts"></div>
+	<div class="charts-modal"></div>
+</section>
