--- a/app/sass/_app.scss
+++ b/app/sass/_app.scss
@@ -106,3 +106,19 @@ a {
     }
   }
 }
+
+// charts
+@include b(c-charts) {
+  clear: fix;
+  padding-left: 0;
+
+  @include e(item) {
+
+    @include tablet-desktop() {
+      lost-column: 1/2;
+      overflow: hidden;
+    }
+    list-style-type: none;
+    margin-bottom: 20px;
+  }
+}
